remove JLine